--- a/styles/aichat.module.css
+++ b/styles/aichat.module.css
@@ -80,7 +80,7 @@
 
 .sendButton {
   padding: 10px 20px;
-  background-color: #000000;
+  background: linear-gradient(45deg, #2563eb, #7c3aed);
   color: white;
   border: none;
   border-radius: 5px;
@@ -88,7 +88,7 @@
 }
 
 .sendButton:hover {
-  background-color: #414141;
+  background: linear-gradient(45deg, #7c3aed, #2563eb);
 }
 
 .loading {
@@ -105,7 +105,7 @@
 .soundIcon {
   position: absolute;
   bottom: -25;
-  left: 0;
+  left: -5;
   cursor: pointer;
   font-size: 20px;
   margin-left: 10px;
@@ -114,7 +114,7 @@
 .copyIcon {
   position: absolute;
   bottom: -25;
-  left: 25;
+  left: 35;
   cursor: pointer;
   font-size: 20px;
   margin-left: 10px;
